test/resources/valid/com/boothj5/jarchexample/configuration/dao/ConfigurationDAO.java
package com.boothj5.jarchexample.configuration.dao;

import java.util.List;

import com.boothj5.jarchexample.common.*;
