test/resources/invalid/com/boothj5/jarchexample/configuration/repository/ConfigurationRepository.java
package com.boothj5.jarchexample.configuration.repository;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.dao.ConfigurationDAO;
